--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_API_URL=https://ecommerce-server-0qox.onrender.com/api
+# VITE_API_URL=https://ecommerce-server-0qox.onrender.com/api
+VITE_API_URL=http://localhost:5000/api
